# 1sem_project

./: 1st query from client.cpp  client.cpp  client_side.cpp  script.sql
MySql_client/: CMakeLists.txt  app_request.cpp  app_request.h  db_client.cpp  db_client.h  main.cpp
json_test/: CMakeLists.txt  jconverter.cpp  jconverter.h  jconverter_one.cpp  jconverter_one.h  jconverter_two.cpp  jconverter_two.h  main.cpp  main.cpp~
server_side/: CMakeLists.txt  app_request.cpp  app_request.h  db_client.cpp  db_client.h  jconverter.cpp  jconverter.h  main.cpp
server_side /: CMakeLists.txt  db_client.cpp  db_client.h  jconverter.cpp  jconverter.h  main.cpp  server.cpp  server.h  ss_exception.cpp  ss_exception.h
sync_server/: CMakeLists.txt  a.out  main.cpp  main.cpp~
